objects/Animal_Count_Lifestage__c.object
<CustomObject>
    <description>For capturing the count and lifestage by specifies for a Retail Producer Account or Prospect.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account to which the Count and Lifestages are related.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Animal Count &amp; Lifestages</relationshipLabel>
        <relationshipName>Animal_Count_Lifestages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Animal_Count__c</fullName>
        <label>Animal Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Bee Colonies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animals_Served__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of Animals Fed compared to the Animal Count</description>
        <label>Animals Fed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifestage__c</fullName>
        <description>Dependent picklist for Animal Type.</description>
        <label>Lifestage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Animal_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aqua</fullName>
                </value>
                <value>
                    <fullName>Back Grounder</fullName>
                </value>
                <value>
                    <fullName>Boarding Kennel</fullName>
                </value>
                <value>
                    <fullName>Breeder Operation</fullName>
                </value>
                <value>
                    <fullName>Breeding Stallion</fullName>
                </value>
                <value>
                    <fullName>Brood Mares</fullName>
                </value>
                <value>
                    <fullName>Caged Bird</fullName>
                </value>
                <value>
                    <fullName>Calf Milk Replacer</fullName>
                </value>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Commercial Cow</fullName>
                </value>
                <value>
                    <fullName>Deer-Elk</fullName>
                </value>
                <value>
                    <fullName>Exotics</fullName>
                </value>
                <value>
                    <fullName>Family Flock</fullName>
                </value>
                <value>
                    <fullName>Fed Cattle</fullName>
                </value>
                <value>
                    <fullName>Foals</fullName>
                </value>
                <value>
                    <fullName>Free Range Property</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Hogs</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>Nursery</fullName>
                </value>
                <value>
                    <fullName>PB Cow Bull</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Hunting Preserve</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Show Performance</fullName>
                </value>
                <value>
                    <fullName>Sow/Boar Replacement</fullName>
                </value>
                <value>
                    <fullName>Sporting/ Show Dogs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Animal Count &amp; Lifestage</label>
    <nameField>
        <displayFormat>ACL-{00000}</displayFormat>
        <label>Count/Lifestage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Counts &amp; Lifestages</pluralLabel>
    <recordTypes>
        <fullName>Producer_Count_Lifestages</fullName>
        <active>true</active>
        <description>Includes Lifestages fields for Retail or Direct Producer records.</description>
        <label>Producer Count &amp; Lifestages</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Animals_Fed_Less_Than_Animal_Count</fullName>
        <active>true</active>
        <description>Animals Fed must be less than the Animal Count</description>
        <errorConditionFormula>RecordType.Name = &quot;Producer Count &amp; Lifestages&quot;
&amp;&amp; 
Animals_Served__c &gt; Animal_Count__c</errorConditionFormula>
        <errorMessage>Animals Fed cannot be greater than the Animal count</errorMessage>
    </validationRules>
</CustomObject>